2006-04-25  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Test for inablility to suppress GPG warnings which cause
	tests to fail.  Supress warnings for bases.
	(Report from Mark D. Baushke  <mdb@gnu.org>.)

	* rcs.c (RCS_delete_openpgp_signatures): Avoid double-free.  Add
	comments.  Clarify traces.
	(Report from Mark D. Baushke  <mdb@gnu.org>.)

2006-04-24  Mark D. Baushke  <mdb@gnu.org>

	* sanity.sh ($bases): Do not assume 'export VAR=value'
	works for all Bourne Shells -- Solaris does not.

2006-04-13  Derek Price  <derek@ximbiot.com>

	* diff.c (diff_fileproc): Correct for Version_TS error when calling
	make_file_label.

2006-04-12  Derek Price  <derek@ximbiot.com>

	* lock.c: #include "repos.h" for proto.

2006-03-24  Derek Price  <derek@ximbiot.com>

	* verify.c: #include <getopt.h>.
	(verify_usage): Correct usage.
	(verify): Use declared int type for getopt return - char may be
	unsigned on some systems.

2006-03-13  Derek Price  <derek@ximbiot.com>

	Handle OpenPGP version 4 signatures.
	* gpg.c (struct openpgp_signature_subpacket): New struct.
	(parse_signature_subpacket): New function.
	(parse_signature): Process version 4 signatures.

2006-01-27  Derek Price  <derek@ximbiot.com>

	* verify.c: #include "wait.h" from GNULIB.

2006-01-26  Derek Price  <derek@ximbiot.com>

	* verify.c: s/VERIFY_NEVER/VERIFY_OFF/.

2006-01-20  Derek Price  <derek@ximbiot.com>

	* diff.h: New file.

	* base.c (base_diff): Handle client/server mode.
	* client.c (base_copy): Expand header comment.
	(client_base_diff, handle_base_diff): New function.
	(responses): Add Base-diff.
	* diff.c (diff_mark_errors): Export.
	(empty_files): s/int/bool/.
	(diff_fileproc): Reduce verbosity.  Avoid passing `-' as part of a
	revision number.  Pass time stamp to make_file_label when available.
	(get_diff_info): New function.
	* entries.c: Add traces.
	* rcs.c (make_file_label), rcs.h: Accept time stamp as an argument.
	* server.c (requests): Add Base-diff.